--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,13 @@ body {
 
 .main-card {
     display: flex;
-    padding-block: 50px;
-    padding-right: 80px;
+    padding-top: 60px;
+    padding-right: 90px;
     border-radius: 20px;
     box-shadow: 0px 15px 27px 0px rgba(0, 0, 0, 0.75);
     background-color: white;
     position: relative;
+    
 }
 
 .illustration-section,
@@ -72,6 +73,8 @@ body {
     height: 500px;
 }
 
+
+
 .desktop {
     width: 100%;
     height: 100%;
@@ -79,11 +82,11 @@ body {
 
 .illustration-box {
     position: absolute;
-    top: 45%;
-    left: -12%;
+    top: 50%;
+    left: -15%;
     z-index: 10;
-    width: 25%;
-    height: 25%;
+    width: 30%;
+    height: 30%;
     object-fit: contain;
 }
 
@@ -100,7 +103,40 @@ body {
     height: 100%;
     object-fit: contain;
     position: absolute;
-    top: 0;
+    top: 0px;
     left: -15%;
     z-index: 5;
+}
+
+
+.faq-section h2{
+    font-size: xx-large;
+    padding-bottom: 40px;
+}
+
+.accordion h3{
+    font-size: 16px;
+    color: var(--clr-VeryDarkGrayishBlue);
+    position: relative;
+    /* background-color: aqua; */
+    padding-block: 15px;
+    cursor: pointer;
+    border-bottom: 2px solid var(--clr-LightGrayishBlue);
+}
+
+.accordion h3::before{
+    content: "+";
+    position: absolute;
+    right: 20px;
+    font-size: 18px;
+}
+
+.accordion p{
+    padding-block: 15px;
+    font-size: 14px;
+    
+}
+
+.active{
+    display: none;
 }
