--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     box-shadow: 0px 15px 27px 0px rgba(0, 0, 0, 0.75);
     background-color: white;
     position: relative;
-    
+
 }
 
 .illustration-section,
@@ -109,12 +109,12 @@ body {
 }
 
 
-.faq-section h2{
+.faq-section h2 {
     font-size: xx-large;
     padding-bottom: 40px;
 }
 
-.accordion h3{
+.accordion h3 {
     font-size: 16px;
     color: var(--clr-VeryDarkGrayishBlue);
     position: relative;
@@ -124,19 +124,35 @@ body {
     border-bottom: 2px solid var(--clr-LightGrayishBlue);
 }
 
-.accordion h3::before{
+.accordion h3::before {
     content: "+";
     position: absolute;
     right: 20px;
     font-size: 18px;
+    transition: transform 0.4s ease;
 }
 
-.accordion p{
-    padding-block: 15px;
+.accordion h3.active::before {
+    content: "-";
+    transform: rotate(180deg);
+}
+
+
+
+.accordion p {
+    /* padding-block: 15px; */
+    /* margin-block: 15px; */
     font-size: 14px;
-    
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+    /* display: none; */
+
 }
 
-.active{
-    display: none;
+.accordion p.active {
+    /* background-color: aqua; */
+    padding-block: 15px;
+    max-height: 200px;
+    /* display: block; */
 }
