--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -48,12 +48,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+
 }
 
 .container {
     width: 90%;
     max-width: 68.75rem;
-    /*1100px*/
+    margin: auto;
 
 }
 
@@ -82,6 +84,10 @@ body {
 .desktop {
     width: 100%;
     height: 100%;
+}
+
+.illustration-section .mobile {
+    display: none !important;
 }
 
 .illustration-box {
@@ -205,17 +211,29 @@ body {
 /* Mobile */
 @media (max-width: 850px) {
 
+    .container {
+        max-width: 40.625rem;
+        /*650px*/
+        margin-top: 9.375rem;
+        /*150px*/
+    }
+
     .main-card {
         display: flex;
         flex-direction: column;
-        padding-block: 3.75rem;
+        padding-top: 0;
+        padding-bottom: 3.75rem;
         /*60px*/
-        position: relative;
+
 
     }
 
     .illustration-section .desktop {
         display: none !important;
+    }
+
+    .illustration-section .mobile {
+        display: block !important;
     }
 
     .illustration-section,
@@ -226,7 +244,8 @@ body {
 
     .faq-section h2 {
         text-align: center;
-        font-size: 28px;
+        font-size: 1.75rem;
+        /*28px*/
     }
 
     .accordions-section {
@@ -234,14 +253,48 @@ body {
         padding-bottom: 0;
         padding-right: 0;
     }
-    
-    .accordion{
+
+    .accordion {
         padding-inline: 1.25rem;
 
     }
 
-    .accordion-title h3{
-        font-size: 14.5px;
+    .accordion-title h3 {
+        font-size: 0.906rem;
+        /*14.5px*/
+    }
+
+    .mobile {
+        position: relative;
+        height: 9.375rem;
+        /*150px*/
+    }
+
+
+    .illustration-woman-mobile {
+        background-image: url("/images/illustration-woman-online-mobile.svg");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+        width: 70%;
+        transform: scale(1.5);
+        position: absolute;
+        top: -60%;
+        left: 15%;
+    }
+
+    .bg-pattern-mobile {
+        background-image: url("/images/bg-pattern-mobile.svg");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: -10%;
+        left: 0%;
+        transform: scale(0.9);
     }
 
 }
