--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,7 @@ body {
         flex-direction: column;
         padding-top: 0;
         padding-bottom: 3.75rem;
+        margin-block: 3.75rem;
         /*60px*/
 
 
